--- a/style.css
+++ b/style.css
@@ -1,114 +1,155 @@
-.header{width: 100%;
-    /* background-color: antiquewhite; */
+.header {
+  width: 100%;
+  /* background-color: antiquewhite; */
+}
+.empty {
+  width: 30%;
+  height: 200px;
+  float: right;
+  background-color: rgb(124, 156, 92);
+}
+.lefth {
+  display: flex;
+}
+.righth {
+  margin-left: 25px;
+}
+.nav {
+  display: flex;
+  background-color: aquamarine;
+}
+.nav div {
+  border-right: 3px solid rgb(228, 214, 214);
+  padding-right: 10px;
+  padding: 10px;
+  border: 1px solid rgb(228, 228, 86);
+  font-weight: 900;
+}
+.m img {
+  width: 100%;
+  height: 200px;
+}
+.afternav {
+  width: 70%;
+  background-color: #f4f4f4;
+}
+.mleft {
+  margin-left: 20px;
+  float: left;
+}
 
+.about div h1 {
+  font-size: 30px;
 }
-.empty{
-    width: 30%;
-    height: 200px;
-    float: right;
-    background-color: rgb(124, 156, 92);
-    
+.title p {
+  font-size: 20px;
 }
-.lefth{
-    display: flex;
+.iteeasia h1 {
+  font-weight: 200;
 }
-.righth{
-    margin-left: 25px;
+.iteebd h1 {
+  font-weight: 200;
 }
-.nav{
-    display: flex;
-    background-color: aquamarine;
+.bangla {
+  font-weight: 800;
 }
-.nav div{    border-right: 3px solid rgb(228, 214, 214);
-    padding-right: 10px;
-    padding: 10px;
-    border: 1px solid rgb(228, 228, 86);
-    font-weight: 900;
-
+button {
+  background-color: #009a8c;
+  padding: 15px;
+  cursor: pointer;
 }
-.m img{
+.nav2 {
+  background-color: #009a8c;
+  width: 20%;
+  float: right;
+}
+.srow {
+  width: 100%;
+  margin-top: 30px;
+}
+.srow .table {
+  width: 100%;
+}
+.table {
+  background-image: url("./kk.png");
+}
+.table .tleft {
+  width: 45%;
+  float: left;
+  height: 200px;
+  overflow-y: scroll;
+}
+.table .tleft ul li {
+}
+.tright {
+  float: right;
+  width: 50%;
+}
+.table .tright ul li {
+  width: 30%;
+  float: right;
+}
+.footer {
+  background-color: black;
+  padding: 15px;
+  display: flex;
+}
+.logoimg {
+  display: flex;
+  padding: 20px;
+  text-align: center;
+}
+.logoimg .logop {
+}
+h1 {
+  color: rgba(0, 0, 0, 0.63);
+}
+.footer .a,
+.b {
+  color: #fff;
+}
+.a{
+    text-align: justify;
+}
+@media only screen and (max-width: 600px){
+ .nav{
+    display: block;
+ }
+ .pic{
+    width: 80vw;
+ }
+ .m{
     width: 100%;
-    height: 200px;
-}
-.afternav{
-    width: 70%;
-    background-color:#F4F4F4 ;
-
-}
-.mleft{
-    margin-left: 20px;
-    float: left;
-}
-
-
-.about div h1{
-    font-size: 30px;
-}
-.title p{
+    height: 25%;
+ }
+ .about div h1{
     font-size: 20px;
-    
-}
-.iteeasia h1{
-    font-weight: 200;
-    
-}
-.iteebd h1{
-    font-weight: 200;
-}
-.bangla{
-    font-weight: 800;
-}
-button{
-    background-color: #009A8C;
-    padding: 15px;
-    cursor: pointer;
-}
-.nav2{
-    background-color: #009A8C;
-    width: 20%;
-    float: right;
-}
-.srow{
-    width: 100%;
-    margin-top: 30px;
-    
-}
-.srow .table{
-    width: 100%;
-}
-.table{ background-image: url('./kk.png');
-}
-.table .tleft{ width: 45%;
-    float: left;
-    height: 200px;
-    overflow-y: scroll;
-}
-.table .tleft ul li{   
+ }
+ .a{
+    font-size: 12px;
+    margin-right: 9px;
+ }
+ .title p{
+    font-size: 18px;
+ }
+ ol{
+    font-size: 15px;
+    text-align: justify;
+    margin-right: 15px;
+ }
+ h1{
+    font-size: 22px;
+ }
+ .asia{
+    text-align: justify;
+    margin-right: 13px;
 
-}
-.tright{
-    float: right;
-    width: 50%;}
-.table .tright ul li{
-    width: 30%;
-    float: right;
-}
-.footer{
-    background-color: black;
-    padding: 15px;
-    display: flex;
-}
-.logoimg{
-    display: flex;
-    padding: 20px;
-    text-align: center;
-}
-.logoimg .logop{
-}
-h1{
-    color: rgba(0, 0, 0, 0.63)
+ }
+ .logoimg{
+    font-size: 10px;
+ }
+ .logoimg img{
+    width: 50px;
+ }
 
-}
-.footer .a,.b{
-    color: #fff;
 }
